--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/calorie-counter:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/samaanai-streamlit:$COMMIT_SHA', '.']
 
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/calorie-counter:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/samaanai-streamlit:$COMMIT_SHA']
 
   # Deploy the container image to Cloud Run (Initial Deployment ONLY)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -14,13 +14,13 @@ steps:
       [
         'run',
         'deploy',
-        'calorie-counter',  # Your service name
-        '--image', 'gcr.io/$PROJECT_ID/calorie-counter:$COMMIT_SHA',
-        '--region', '<your-cloud-run-region>',  # e.g., us-central1
+        'samaanai-streamlit',  # Your service name
+        '--image', 'gcr.io/$PROJECT_ID/samaanai-streamlit:$COMMIT_SHA',
+        '--region', '$_REGION',  # Use the substitution variable
         '--platform', 'managed',
         '--allow-unauthenticated', # Or configure authentication as needed
         '--set-secrets',  # Connect to Secret Manager for the password
         'DB_PASS=projects/$PROJECT_ID/secrets/<your-secret-name>/versions/latest'
       ]
 images:
-  - 'gcr.io/$PROJECT_ID/calorie-counter:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/samaanai-streamlit:$COMMIT_SHA'
