--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,7 @@ steps:
         '--platform', 'managed',
         '--allow-unauthenticated', # Or configure authentication as needed
         '--set-secrets',  # Connect to Secret Manager for the password
-        'DB_PASS=projects/$PROJECT_ID/secrets/<your-secret-name>/versions/latest'
+        'DB_PASS=projects/$PROJECT_ID/secrets/DB_PASSWORD/versions/latest'
       ]
 images:
   - 'gcr.io/$PROJECT_ID/samaanai-streamlit:$COMMIT_SHA'
