--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,9 @@ steps:
         '--platform', 'managed',
         '--allow-unauthenticated', # Or configure authentication as needed
         '--set-secrets',  # Connect to Secret Manager for the password
-        'DB_PASSWORD=projects/$PROJECT_ID/secrets/DB_PASSWORD/versions/latest'  # CORRECTED
+        # 'DB_PASSWORD=projects/$PROJECT_ID/secrets/DB_PASSWORD/versions/latest'  # CORRECTED
+        'DB_PASSWORD=projects/$PROJECT_ID/secrets/DB_PASSWORD:latest'
+
       ]
 images:
   - 'gcr.io/$PROJECT_ID/samaanai-streamlit:$COMMIT_SHA'
