--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,8 +22,7 @@ steps:
         '--platform', 'managed',
         '--allow-unauthenticated', # Or configure authentication as needed
         '--set-secrets',  # Connect to Secret Manager for the password
-        # 'DB_PASSWORD=projects/$PROJECT_ID/secrets/DB_PASSWORD/versions/latest'  # CORRECTED
-        'DB_PASSWORD=projects/$PROJECT_ID/secrets/DB_PASSWORD:latest'
+        'DB_PASSWORD=DB_PASSWORD:latest'
 
       ]
 images:
